# KomgaPy

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: controllers.md  examples.md  methods.md  methods_list.md
src/komgapy/: __init__.py  convert_response_util.py  exception_classes.py  komga_session.py  util.py
src/komgapy/response_classes/: __init__.py  cbl_match_response.py  komga_book.py  komga_book_metadata.py  komga_collection.py  komga_error_response.py  komga_item.py  komga_library.py  komga_readlist.py  komga_response.py  komga_search_response.py  komga_series.py  komga_series_books_metadata.py  komga_series_metadata.py
src/komgapy/util/: convert_data_to_komga_object.py  convert_list_to_komga_objects.py  covert_response_to_object.py  general.py
src/komgapy/wrapper/: __init__.py  book.py  collection.py  generic.py  library.py  readlist.py  referential.py  request_adapter.py  series.py  util_methods.py
src/komgapy/wrapper/controllers/: __init__.py  books.py  collections.py  libraries.py  readlists.py  referential.py  series.py
src/komgapy/wrapper/parent_classes/: __init__.py  content.py  file_access.py  generic.py  groups.py  komga_item.py
