[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'komgapy'
dynamic = ['version']
dependencies = [
    'requests',
    'pillow'
    ]
requires-python = '>=3.8'
authors = [{name = 'Lerch'}]
description = 'Python wrapper for Komga API'
readme = 'README.md'
license = { text = 'MIT License' }
keywords = ['Komga', 'Comics', 'Manga']
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3'
    ]

[tool.setuptools.dynamic]
version = {attr = 'komgapy.__version__'}

